feat #11 프로젝트 참여요청, 프로필에 진행중인 프로젝트 표시