@@ -10,27 +10,20 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
 import java.util.List;
 
-/**
- * 프로필 페이지 뷰 컨트롤러
- */
 @Controller
 @RequiredArgsConstructor
 public class ProfileViewController {
     private final ProfileService profileService;
     private final ProjectService projectService;
 
-    /**
-     * 내 프로필 페이지
-     */
     @GetMapping("/profile")
     public String profilePage(
             @AuthenticationPrincipal UserPrincipal principal,
             Model model
     ) {
-        // 프로필 정보가 없으면 편집 페이지로 이동
+        // 프로필 정보
         try {
             model.addAttribute("profile", profileService.getProfile());
         } catch (IllegalStateException e) {
@@ -40,8 +33,8 @@ public class ProfileViewController {
         model.addAttribute("activityList", profileService.getRecentActivity(5));
         model.addAttribute("stats", profileService.getStats());
 
-        // 내가 참여한 프로젝트 데이터
-        Long userId = principal != null ? principal.getId() : 1L;  // 테스트 환경용 기본 ID
+        // 내 프로젝트(소유 + 참여) – 서비스에서 합쳐서 리턴
+        Long userId = principal != null ? principal.getId() : 1L;  // 테스트용 기본 ID
         List<Project> myProjects = projectService.getProjectsForUser(userId);
         model.addAttribute("myProjects", myProjects);
 
@@ -61,7 +54,7 @@ public class ProfileViewController {
             @RequestParam String bio,
             @RequestParam(name = "skills", required = false) List<String> skills
     ) {
-        if (skills == null) skills = Collections.emptyList();
+        if (skills == null) skills = List.of();
         profileService.updateProfile(position, bio, skills);
         return "redirect:/profile";
     }
